crates/tau-cli/tests/snapshots/cmd_skill_show__show_human_with_body_raw.snap
---
source: crates/tau-cli/tests/cmd_skill_show.rs
assertion_line: 179
expression: normalized
---
critic 0.1.0
─────────────────────────────────────────────────
description    Reviews drafts for quality.
source         https://example.com/critic.git
install path   [SCOPE]/packages/critic/0.1.0

capabilities
  fs.read    ${SKILL_DIR}/references/**

body (raw)
─────────────────────────────────────────────────

# Critic Skill

You are a writing critic. Review the provided draft and give feedback.
